--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/node": "^20.5.6",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
     "knex": "^2.5.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "zod": "^3.22.2"
   }
 }
