--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.0.4",
     "@types/node": "^20.5.6",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
