--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.47.0",
+    "supertest": "^6.3.3",
     "tsx": "^3.12.7",
     "typescript": "^5.2.2",
     "vitest": "^0.34.3"
